syntax = "proto3";

option go_package = "./pb";

package relation;
message PageReq {
  int32 page = 1;
  int32 page_size = 2;
}
message PageResp {
  int32 page = 1;
  int32 page_size = 2;
  int64 total = 3;
}
message RelationBaseResp {
  enum Errno {
    OK = 0;
    ERROR = 1;
  }
  Errno errCode = 1;
  string errMsg = 2;
}
message ApplyFriendReq {
  string applyUserId = 1; // 申请人
  string userId = 2; // 被申请人
  string message = 3; // 申请信息
}
message ApplyFriendResp {
  RelationBaseResp baseResp = 1;
}
message UpdateApplyFriendStatusReq {
  enum Status {
    AGREE = 0;
    REFUSE = 1;
  }
  Status status = 1;
  string id = 2; // 申请记录id
  string selfId = 3; // 自己的id
}
message UpdateApplyFriendStatusResp {
  RelationBaseResp baseResp = 1;
}
message GetApplyFriendListReq {
  string selfId = 1; // 用户id
  PageReq pageReq = 2;
}
message GetApplyFriendListResp {
  RelationBaseResp baseResp = 1;
  message ApplyFriend {
    string id = 1; // 申请记录id
    string applyUserId = 2; // 申请人
    string userId = 3; // 被申请人
    string message = 4; // 申请信息
    string createTime = 5; // 申请时间
    enum Status {
      Applying = 0;
      AGREE = 1;
      REFUSE = 2;
    }
    Status status = 6; // 申请状态
  }
  PageResp pageResp = 2;
  repeated ApplyFriend applyFriendList = 3;
}
message GetFriendListReq {
  string selfId = 1; // 用户id
}
message GetFriendListResp {
  RelationBaseResp baseResp = 1;
  message Friend {
    string userId = 1; // 用户id
    string selfId = 2; // 自己的id
    string remark = 3; // 备注
    string createTime = 4; // 加好友的时间
  }
  repeated Friend friendList = 2;
}
message DeleteFriendReq {
  string selfId = 1; // 用户id
  string userId = 2; // 好友id
}
message DeleteFriendResp {
  RelationBaseResp baseResp = 1;
}
message GetBlackListReq {
  string selfId = 1; // 用户id
  PageReq pageReq = 2;
}
message GetBlackListResp {
  RelationBaseResp baseResp = 1;
  message Black {
    string userId = 1; // 用户id
    string selfId = 2; // 自己的id
    string createTime = 3; // 加黑的时间 排序键
  }
  PageResp pageResp = 2;
  repeated Black blackList = 3;
}
message DeleteBlackReq {
  string selfId = 1; // 用户id
  string userId = 2; // 好友id
}
message DeleteBlackResp {
  RelationBaseResp baseResp = 1;
}
message BlackUserReq {
  string selfId = 1; // 用户id
  string userId = 2; // 好友id
}
message BlackUserResp {
  RelationBaseResp baseResp = 1;
}
service relationService {
  rpc ApplyFriend (ApplyFriendReq) returns (ApplyFriendResp);
  rpc UpdateApplyFriendStatus (UpdateApplyFriendStatusReq) returns (UpdateApplyFriendStatusResp);
  rpc GetApplyFriendList (GetApplyFriendListReq) returns (GetApplyFriendListResp);
  rpc GetFriendList (GetFriendListReq) returns (GetFriendListResp);
  rpc DeleteFriend (DeleteFriendReq) returns (DeleteFriendResp);
  rpc GetBlackList (GetBlackListReq) returns (GetBlackListResp);
  rpc DeleteBlack (DeleteBlackReq) returns (DeleteBlackResp);
  rpc BlackUser (BlackUserReq) returns (BlackUserResp);
}
